[tool.poetry]
name = "dcwiz-app-utils"
version = "0.4.0"
description = ""
authors = ["Zhu Zhaomeng <zhaomeng.zhu@ntu.edu.sg>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dcwiz_app_utils"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.3"
typer = "^0.7.0"
dynaconf = "^3.1.11"
alembic = "^1.9.3"
httpx = "^0.23.3"
pandas = "^1.5.3"
cachetools = "^5.3.0"
asyncache = "^0.3.1"
redis = "^4.5.1"
loguru = "^0.6.0"
fastapi = "^0.94.1"
uvicorn = "^0.21.0"
aiofiles = "^23.1.0"
authlib = "^1.2.0"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.1.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dcwiz-app-token-helper = "dcwiz_app_utils.tools.token:main"