[tool.poetry]
name = "dcwiz-app-utils"
version = "0.9.2"
description = ""
authors = ["Zhu Zhaomeng <zhaomeng.zhu@ntu.edu.sg>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dcwiz_app_utils"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.3"
dynaconf = "^3.1.11"
alembic = "^1.9.3"
cachetools = "^5.3.0"
asyncache = "^0.3.1"
redis = "^4.5.1"
aiofiles = "^23.1.0"
authlib = "^1.2.0"
pandas = "^2.0.0"
httpx = "^0.24.0"
loguru = "^0.7.0"
typer = "^0.12.3"
fastapi = "^0.111.0"
itsdangerous = "^2.1.2"

uvicorn = {version="^0.30.1", optional=true}
python-dotenv = {version="^1.0.0", optional=true}

[tool.poetry.extras]
dev-helper = ["uvicorn", "python-dotenv"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dcwiz-app-token-helper = "dcwiz_app_utils.tools.token:main"