[tool.poetry]
name = "dcwiz-app-utils"
version = "0.11.2"
description = ""
authors = ["Zhu Zhaomeng <zhaomeng.zhu@ntu.edu.sg>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dcwiz_app_utils"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.3"
dynaconf = "^3.1.11"
alembic = "^1.9.3"
cachetools = "^5.3.0"
asyncache = "^0.3.1"
redis = "^5.2.0"
aiofiles = "^24.1.0"
authlib = "^1.2.0"
pandas = "^2.0.0"
httpx = "^0.28.0"
loguru = "^0.7.0"
typer = "^0.15.0"
fastapi = "^0.120.2"
itsdangerous = "^2.1.2"

uvicorn = {version="^0.32.1", optional=true}
python-dotenv = {version="^1.0.0", optional=true}

python-multipart = "^0.0.19"
[tool.poetry.extras]
dev-helper = ["uvicorn", "python-dotenv"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dcwiz-app-token-helper = "dcwiz_app_utils.tools.token:main"

[tool.ruff]
target-version = "py311"